Unnecessary code was removed

--- a/Neural_Network_Returns_Individual_Daily.ipynb
+++ b/Neural_Network_Returns_Individual_Daily.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMu/FQT2UoeaF4BEVR/m93r",
+      "authorship_tag": "ABX9TyPEXobync9oGaIkSbRqI0Ku",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Stephanie-Daniella/Stock-Returns-Neural-Nerwork/blob/IPYNB-tests/Neural_Network_Returns_Individual_Daily.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Stephanie-Daniella/Stock-Returns-Neural-Nerwork/blob/main/Neural_Network_Returns_Individual_Daily.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 619,
+      "execution_count": null,
       "metadata": {
         "id": "t1wqZb7LA8wz"
       },
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "0IDId1CCGc9r"
       },
-      "execution_count": 620,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
         "id": "YXmSSAalBJNi",
         "outputId": "d822789c-d8ed-45d7-e00c-abbc079d349c"
       },
-      "execution_count": 641,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "f10Zl8egtiiT"
       },
-      "execution_count": 642,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
         "id": "anazw3p6owUa",
         "outputId": "bc0f1780-1619-4a69-b2bf-9234bbfd4baa"
       },
-      "execution_count": 643,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +509,7 @@
         "id": "f48qVNoaBo5Q",
         "outputId": "21534667-e132-43e5-ce9a-57f0eb34e1d3"
       },
-      "execution_count": 644,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -910,7 +910,7 @@
           "height": 444
         }
       },
-      "execution_count": 645,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1500,7 +1500,7 @@
         },
         "outputId": "780f1427-38b1-4a0e-b540-21d935037f3f"
       },
-      "execution_count": 626,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1611,7 +1611,7 @@
         },
         "outputId": "7ecfbe15-58ed-4c6b-faec-c2916fe04197"
       },
-      "execution_count": 627,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2198,7 +2198,7 @@
       "metadata": {
         "id": "bTuy3XoTJT1X"
       },
-      "execution_count": 628,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2209,7 +2209,7 @@
       "metadata": {
         "id": "gKQbh8s5K7P4"
       },
-      "execution_count": 629,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2223,7 +2223,7 @@
       "metadata": {
         "id": "2uvCRTzNJiPv"
       },
-      "execution_count": 630,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2257,7 +2257,7 @@
         },
         "outputId": "ecb02f2a-c407-448c-cc79-41e077e982ee"
       },
-      "execution_count": 649,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2402,7 +2402,7 @@
         },
         "outputId": "8a3ce9ff-89a1-4ff8-df83-d1acce65a15e"
       },
-      "execution_count": 650,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2818,7 +2818,7 @@
         },
         "outputId": "06811bcc-0d83-4887-98eb-e71844cef5da"
       },
-      "execution_count": 669,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2854,7 +2854,7 @@
         },
         "outputId": "38946bc1-decd-435b-97bf-36a1aba3a930"
       },
-      "execution_count": 670,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2886,7 +2886,7 @@
         "id": "qKIgVUi9curg",
         "outputId": "c5705e36-8c31-42cc-a19f-959a6ccab62e"
       },
-      "execution_count": 671,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2921,7 +2921,7 @@
         "id": "TpqB3Lj2bP4D",
         "outputId": "9542c8b7-d591-4d52-b162-f93b6df6f713"
       },
-      "execution_count": 672,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2947,30 +2947,24 @@
         "Y_Test_DF = pd.DataFrame(Y_Test_100D)\n",
         "Y_Predict_Train_DF = pd.DataFrame(Y_Predict_Train_3.iloc[start:end])\n",
         "\n",
-        "# Asegurarse de que la columna 'Fecha' sea del tipo datetime\n",
         "Y_Test_DF['Date'] = pd.to_datetime(data.index[start:end])\n",
         "Y_Predict_Train_DF['Date'] = pd.to_datetime(data.index[start:end])\n",
         "\n",
         "\n",
-        "# Crear el gráfico\n",
         "plt.figure(figsize=(10, 6))\n",
         "\n",
-        "# Graficar ambos DataFrames\n",
         "plt.plot(Y_Test_DF['Date'], Y_Test_DF['ChangeToPredict'], label='Real Returns', color='blue')\n",
         "plt.plot(Y_Predict_Train_DF['Date'], Y_Predict_Train_DF['ChangeToPredict'], label='Predicted Return', color='red')\n",
         "\n",
-        "# Añadir etiquetas y título\n",
         "plt.xlabel('Date')\n",
         "plt.ylabel('Standarized Returns')\n",
         "plt.title('Returns Training Data')\n",
         "\n",
-        "# Mostrar leyenda\n",
         "plt.legend()\n",
         "\n",
-        "# Mostrar el gráfico\n",
         "plt.grid(True)\n",
-        "plt.xticks(rotation=45)  # Rotar las fechas para que se vean bien\n",
-        "plt.tight_layout()  # Ajustar el diseño para que no se solapen las etiquetas\n",
+        "plt.xticks(rotation=45)\n",
+        "plt.tight_layout()\n",
         "plt.show()"
       ],
       "metadata": {
@@ -2981,7 +2975,7 @@
         "id": "T4uebp8RbfmS",
         "outputId": "c1e4f3f8-0487-4f1d-8bf7-5a91bf49fc02"
       },
-      "execution_count": 655,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3043,7 +3037,7 @@
         },
         "outputId": "e8b5db6f-8c4d-4b36-f69c-cd338dc218c8"
       },
-      "execution_count": 661,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3106,7 +3100,7 @@
         },
         "outputId": "0362e00f-befa-4c2e-9a7b-7f7c678da870"
       },
-      "execution_count": 662,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3144,30 +3138,24 @@
         "Y_Test_DF = pd.DataFrame(Y_Test_100D)\n",
         "Y_Predict_Test_DF = pd.DataFrame(Y_Predict_Test_3.iloc[start:end])\n",
         "\n",
-        "# Asegurarse de que la columna 'Fecha' sea del tipo datetime\n",
         "Y_Test_DF['Date'] = pd.to_datetime(data.index[start:end])\n",
         "Y_Predict_Test_DF['Date'] = pd.to_datetime(data.index[start:end])\n",
         "\n",
         "\n",
-        "# Crear el gráfico\n",
         "plt.figure(figsize=(10, 6))\n",
         "\n",
-        "# Graficar ambos DataFrames\n",
         "plt.plot(Y_Test_DF['Date'], Y_Test_DF['ChangeToPredict'], label='Real Returns', color='blue')\n",
         "plt.plot(Y_Predict_Test_DF['Date'], Y_Predict_Test_DF['ChangeToPredict'], label='Predicted Return', color='red')\n",
         "\n",
-        "# Añadir etiquetas y título\n",
         "plt.xlabel('Date')\n",
         "plt.ylabel('Standarized Returns')\n",
         "plt.title('Returns Testing Data')\n",
         "\n",
-        "# Mostrar leyenda\n",
         "plt.legend()\n",
         "\n",
-        "# Mostrar el gráfico\n",
         "plt.grid(True)\n",
-        "plt.xticks(rotation=45)  # Rotar las fechas para que se vean bien\n",
-        "plt.tight_layout()  # Ajustar el diseño para que no se solapen las etiquetas\n",
+        "plt.xticks(rotation=45)\n",
+        "plt.tight_layout()\n",
         "plt.show()"
       ],
       "metadata": {
@@ -3178,7 +3166,7 @@
         "id": "kIs2vTG0VmUz",
         "outputId": "8259db37-d3ca-4785-88a1-34a069e21c40"
       },
-      "execution_count": 668,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
